# sql-master

./: .gitignore  .gitmodules  README.md  SQLCMD.ipr  gradlew.bat  info.txt  settings.gradle  sql-master.ipr
SQLiteCommander/: build.gradle  google-services.json
SQLiteCommander/src/free/res/values/: config.xml
SQLiteCommander/src/main/: AndroidManifest.xml
SQLiteCommander/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  compile.sh  ls.c  sqlite_cmd.c
SQLiteCommander/src/main/res/layout/: activity_add_sql_connection.xml  activity_main.xml  activity_set_password.xml  activity_settings.xml  activity_sqlcmd.xml  activity_sqlite_database_list.xml  activity_sqlitecmd.xml  fragment_cloud.xml  fragment_database_list.xml  fragment_fm.xml  fragment_overview.xml  list_item_database_entry.xml  list_item_fm.xml  nav_header_main.xml
SQLiteCommander/src/main/res/layout-land/: activity_sqlcmd.xml
SQLiteCommander/src/main/res/menu/: activity_main_drawer.xml  main.xml
SQLiteCommander/src/main/res/raw/: create_schema.sql  (+1 more)
ads-mock/: build.gradle
ads-mock/src/main/: AndroidManifest.xml
app/: .gitignore  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  compile.sh  events  link_dir  ls_link  main.cpp  sqlite_verify.c  sqlite_verify.h  sqlite_verify_main.c  test  test.c
example/: build.gradle  proguard-rules.pro
example/src/main/: AndroidManifest.xml
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
materials/: feature_graphics.psd
play-licencing-mock/src/main/: AndroidManifest.xml
(+212 files in other folders)
